# pulse

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PHASE0_ANALYSIS.md  PHASE0_COMPLETE_FIXES.md  PHASE0_FIX_PLAN.md  PHASE0_REPORT.md  PHASE0_VERIFICATION_SUITE.md  README.md  RUST_COMPILER_REVIEW.md  SELF_HOSTING_ANALYSIS.MD  array_access_test.pulse  array_test.pulse  ast.pulse  ast_test.pulse  atomic_test.pulse  benchmark_test.pulse  build_error.txt  build_error_detailed.txt  build_log.txt  build_log_compiler.txt  build_log_v2.txt  build_log_vm.txt  build_output.txt  check_output.txt  check_output_2.txt  choco_packages.txt  cli.pulse  code_generator.pulse  compiler.pulse  compiler_check.txt  comprehensive_data_structures_test.pulse  comprehensive_keyword_test.pulse  comprehensive_pulse_program.pulse  concurrency_test3.pulse  constant_pool_test.pulse  core_data_structures_test.pulse  (+132 more)
.dotnet/.dotnet/: MachineId.v1.dotnetUserLevelCache
.github/workflows/: ci.yml  release.yml
ci/: build-msi.ps1  verify-aot-jit.ps1  wix.xml
compiler/: Cargo.toml
compiler/src/: lib.rs
compiler/src/ast/: Cargo.toml  ast.rs  ast_lowering.rs
compiler/src/ast/src/: lib.rs  value.rs
compiler/src/ast/tests/: diagnostics_tests.rs
compiler/tests/: compiler_pipeline_tests.rs  diagnostics_golden_tests.rs  diagnostics_tests.rs  parser_match.rs  parser_match_test.rs
docs/: .gitignore  COMPATIBILITY_POLICY.md  LANGUAGE_SPEC.md  README.md  RELEASE_SIGNING_POLICY.md  package-lock.json  package.json
docs/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
docs/book/: book.toml
docs/components/: docs-shell.tsx  markdown.tsx  playground.tsx  pulse-syntax-highlighter.ts
docs/lib/: docs.ts
docs/ui/: index.html
examples/: chat_server.pulse  comprehensive.pulse  comprehensive_super.pulse  hello_aot.pulse  main_test_modules.pulse  math_lib.pulse
installers/: build_msi.ps1
installers/wix/: pulse_rust.wxs  pulse_selfhosted.wxs
llvm/aot/: Cargo.toml
llvm/backend/: Cargo.toml
llvm/backend/src/: backend.rs  jit.rs  main.rs
llvm/backend/tests/: e2e_aot_test.rs  jit_test.rs
pulse_aot_runtime/: Cargo.toml
pulse_aot_runtime/src/: lib.rs
pulse_cli/: Cargo.toml  build_log.txt  build_log_2.txt
pulse_cli/src/: benchmark_runner.rs  docs.rs  main.rs  package.rs  repl.rs
pulse_cli/tests/: integration_tests.rs  selfhost_parity_tests.rs  stress_tests.rs
pulse_compiler/: Cargo.toml
pulse_compiler/src/: ast.rs  ast_lowering.rs  compiler.rs  lexer.rs  lib.rs  llvm_codegen.rs  parser.rs  parser_v2.rs  tests.rs  type_checker.rs  types.rs
pulse_compiler/tests/: actor_test.rs  advanced_control_flow_test.rs  compiler_pipeline_tests.rs  control_flow_test.rs  diagnostics_golden_tests.rs  diagnostics_tests.rs
pulse_compiler/tests/golden/: syntax_missing_paren.golden  type_mismatch_assignment.golden
pulse_compiler_pulse/: ast.pulse  lexer.pulse  parser.pulse
pulse_compiler_self/: ast.pulse  bytecode_gen.pulse  parser.pulse  tokenizer.pulse
pulse_core/: Cargo.toml
pulse_core/src/: bytecode.rs  error.rs  lib.rs  object.rs  value.rs
pulse_core/tests/: diagnostics_tests.rs
pulse_llvm_backend/: Cargo.toml
pulse_llvm_backend/src/: backend.rs  jit.rs  lib.rs  main.rs
pulse_llvm_backend/tests/: e2e_aot_test.rs  jit_test.rs
pulse_lsp/: Cargo.toml
pulse_lsp/src/: diagnostics.rs  lib.rs  main.rs
pulse_runtime/: Cargo.toml
pulse_runtime/src/: actor.rs  cluster.rs  lib.rs  mailbox.rs  network.rs  runtime.rs  send_check.rs  stdlib.rs  supervisor.rs
pulse_runtime/tests/: cluster_test.rs  destructuring_test.rs  distributed_test.rs  fence_test.rs  guard_test.rs  interpolation_test.rs  module_test.rs  pattern_matching_test.rs  registry_test.rs  serialization_test.rs  supervision_test.rs  try_catch_test.rs
pulse_stdlib/: Cargo.toml
pulse_stdlib/src/: collections.rs  database.rs  fs.rs  http.rs  io.rs  json.rs  lib.rs  linalg.rs  logging.rs  networking.rs  numpy.rs  pandas.rs  plotting.rs  process.rs  random.rs  regex.rs  stats.rs  string_utils.rs  testing.rs  time.rs  utils.rs  uuid.rs
pulse_vm/: Cargo.toml
pulse_vm/src/: debug.rs  heap.rs  lib.rs  shared_heap.rs  vm.rs
pulse_vm/tests/: closure_test.rs  data_structures_test.rs  gc_native_test.rs  gc_test.rs
scripts/: build-packages.sh  verify-aot-jit.sh
self-hosted/: ast.pulse  bytecode_gen.pulse  compiler.pulse  lexer.pulse  lexer.pulse.orig  parser.pulse  parser.pulse.orig  type_checker.pulse
std/: functional.pulse
stdlib/pulse_stdlib/: Cargo.toml
stdlib/pulse_stdlib/src/: collections.rs  crypto.rs  fs.rs  http.rs  io.rs  json.rs  lib.rs  string_utils.rs  tcp.rs  testing.rs  time.rs  utils.rs  websocket.rs
tests/: bench_actors.pulse  bench_baseline.pulse  bench_messaging.pulse  concurrency_torture.pulse  data_structures_test.pulse  debug_oops.pulse  div_by_zero.pulse  float_div_zero.pulse  gc_stress.pulse  http_test.pulse  negate_overflow.pulse  net_test.pulse  oops_test.pulse  overflow_test.pulse  shared_memory_test.pulse  std_test.pulse  stress_actors.pulse  stress_recursion.pulse  tcp_server.pulse
tests/integration/: arithmetic.pulse  classes.pulse  control_flow.pulse  data_structures.pulse  error_handling.pulse  functions.pulse  language_full_coverage.pulse  strings.pulse  variables.pulse
tools/cli/: Cargo.toml
tools/cli/src/: benchmark_runner.rs  main.rs  repl.rs
tools/cli/tests/: advanced_tests.rs  advanced_tests.rs.orig  advanced_tests.rs.patch  integration_tests.rs  integration_tests.rs.orig  integration_tests.rs.patch  stress_tests.rs
tools/lsp/: Cargo.toml
vm/bytecode/: Cargo.toml
vm/bytecode/src/: heap.rs  lib.rs  shared_heap.rs  vm.rs
vm/runtime/: Cargo.toml
vm/runtime/src/: actor.rs  lib.rs  mailbox.rs  network.rs  runtime.rs  send_check.rs  stdlib.rs  supervisor.rs
vm/runtime/tests/: cluster_test.rs  fence_test.rs  serialization_test.rs
vscode-pulse/: .vscodeignore  language-configuration.json  package-lock.json  package.json  pulse-language-0.1.0.vsix  pulse-language-0.1.1.vsix  pulse-language-0.1.2.vsix
vscode-pulse/src/: extension.ts
(+44 files in other folders)
