[workspace]
resolver = "2"

members = [
    "compiler/src/ast", # pulse_core
    "vm/bytecode", # pulse_vm
    "compiler", # pulse_compiler
    "vm/runtime", # pulse_runtime
    "tools/cli", # pulse_cli
    "stdlib/pulse_stdlib", # pulse_stdlib
    "tools/lsp", # pulse_lsp
    "llvm/aot", # pulse_aot_runtime
    "llvm/backend", # pulse_llvm_backend
]