[package]
name = "pulse_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
pulse_core = { path = "../pulse_core" }
pulse_vm = { path = "../pulse_vm" }
pulse_compiler = { path = "../pulse_compiler" }
pulse_runtime = { path = "../pulse_runtime" }
rustyline = "14"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
