[package]
name = "pulse_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
pulse_core = { path = "../pulse_core" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
llvm-sys = { version = "180.0.0", features = ["prefer-dynamic"] }

[dev-dependencies]
pulse_core = { path = "../pulse_core" }

