[package]
name = "pulse_llvm_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
pulse_core = { path = "../pulse_core" }
pulse_compiler = { path = "../pulse_compiler" }
pulse_runtime = { path = "../pulse_runtime" }
tokio = { version = "1.0", features = ["rt", "macros", "sync", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
pulse_stdlib = { path = "../pulse_stdlib" }
