[package]
name = "pulse_lsp"
version = "0.1.2"
edition = "2021"
description = "Language Server Protocol implementation for Pulse"

[[bin]]
name = "pulse-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulse_compiler = { path = "../pulse_compiler" }
pulse_core = { path = "../pulse_core" }

