[package]
name = "pulse_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
pulse_core = { path = "../pulse_core" }
pulse_vm = { path = "../pulse_vm" }
pulse_compiler = { path = "../pulse_compiler" }
pulse_stdlib = { path = "../pulse_stdlib" }
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"

