[package]
name = "pulse_runtime"
version = "0.1.0"
edition = "2021"


[dependencies]
pulse_core = { path = "../pulse_core" }
pulse_vm = { path = "../pulse_vm" }
pulse_compiler = { path = "../pulse_compiler" }
pulse_stdlib = { path = "../pulse_stdlib" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

