[package]
name = "pulse_stdlib"
version = "0.1.0"
edition = "2021"


[dependencies]
pulse_core = { path = "../pulse_core" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dns-lookup = "2.0"
rand = "0.8"
regex = "1.0"

tokio = { version = "1.0", features = ["fs", "io-util", "net", "sync", "rt", "macros", "time"] }
async-trait = "0.1"
futures = "0.3"
