[package]
name = "pulse_vm"
version = "0.1.2"
edition = "2021"

[dependencies]
pulse_core = { path = "../pulse_core" }
pulse_stdlib = { path = "../pulse_stdlib" }
async-trait = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
pulse_compiler = { path = "../pulse_compiler" }
pulse_runtime = { path = "../pulse_runtime" }

