[package]
name = "pulse_llvm_backend"
version = "0.1.2"
edition = "2024"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
pulse_ast = { path = "../../compiler/src/ast" }
pulse_compiler = { path = "../../compiler" }
pulse_runtime = { path = "../../vm/runtime" }
tokio = { version = "1.0", features = ["rt", "macros", "sync", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
pulse_stdlib = { path = "../../stdlib/pulse_stdlib" }

