[package]
name = "pulse_stdlib"
version = "0.1.2"
edition = "2021"


[dependencies]
pulse_ast = { path = "../../compiler/src/ast" }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
dns-lookup = "2.0"
rand = "0.8"
# rand_distr = "0.4"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"
ndarray = "0.15"
nalgebra = "0.32"
num = "0.4"
csv = "1.3"
serde_json = "1.0"

tokio = { version = "1.0", features = ["fs", "io-util", "net", "sync", "rt", "macros", "time"] }
async-trait = "0.1"
futures = "0.3"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"

ring = "0.17"
bincode = "1.3"

[dev-dependencies]
pulse_vm = { path = "../../vm/bytecode" }

ring = "0.17"
bincode = "1.3"
