[package]
name = "pulse_vm"
version = "0.1.2"
edition = "2021"

[dependencies]
pulse_ast = { path = "../../compiler/src/ast" }
pulse_stdlib = { path = "../../stdlib/pulse_stdlib" }
async-trait = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
pulse_compiler = { path = "../../compiler" }
pulse_runtime = { path = "../../vm/runtime" }

