[package]
name = "pulse_runtime"
version = "0.1.2"
edition = "2021"


[dependencies]
pulse_ast = { path = "../../compiler/src/ast" }
pulse_vm = { path = "../../vm/bytecode" }
pulse_compiler = { path = "../../compiler" }
pulse_stdlib = { path = "../../stdlib/pulse_stdlib" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


