[package]
name = "pulse_ast"
version = "0.1.2"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
bytes = "1.5"
regex = "1.0"

async-trait = "0.1"
futures = "0.3" 
tokio = { version = "1.0", features = ["net", "rt", "macros", "sync"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"

